[package]
name = "linux-sed-opal-sys"
version = "0.1.0"
authors = [ "Alexander Fuchs <alex.fu27@gmail.com>" ]
edition = "2018"
license = "MIT"
categories = [ "external-ffi-bindings" ]
keywords = [ "ffi", "linux", "uapi", "opal", "sed" ]
description = "FFI bindings to linux sed-opal UAPI"

include = [
    "src/lib.rs",
    "build.rs",
    "Cargo.toml",
    "wrapper.h",
]

[dependencies]
nix = { version = "0.27", features = [ "ioctl" ] }

[build-dependencies]
bindgen = { version = "0.65", default-features = false, features = ["which-rustfmt"] }
