[package]
name = "linux-sed-opal-sys"
version = "0.1.0"
authors = [ "Alexander Fuchs <alex.fu27@gmail.com>" ]
edition = "2018"
license = "MIT"
categories = [ "external-ffi-bindings" ]
keywords = [ "ffi", "linux", "uapi", "opal", "sed" ]
description = "FFI bindings to linux sed-opal UAPI (linux/sed-opal.h)"

[features]
# initial support is for linux 6.0
linux_6_1 = []
linux_6_4 = [ "linux_6_1" ]
linux_6_6 = [ "linux_6_4" ]

[dependencies]
nix = { version = "0.27", features = [ "ioctl" ] }
cfg-if = "1.0.0"

[build-dependencies]
bindgen = { version = "0.65", default-features = false, features = ["which-rustfmt"] }
